<resources>
    <string name="app_name">Programa Aeropuerto</string>
    <string name="new_capture">Nueva captura</string>
    <string name="records">Registros</string>
    <string name="stats">Estadísticas</string>
    <string name="start">Iniciar</string>
    <string name="stop">Finalizar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="export_csv">Exportar CSV</string>
    <string name="nationality">Nacionalidad</string>
    <string name="operator">Operador</string>
    <string name="shift">Turno</string>
    <string name="equipment">Equipo</string>
    <string name="notes">Observaciones</string>
    <string name="fingerprints_taken">Huellas tomadas</string>
    <string name="iris_taken">Iris tomado</string>
    <string name="nationality_recorded">Nacionalidad registrada</string>
    <string name="person_name">Nombre de la persona</string>
    <string name="back_home">Volver al inicio</string>
</resources>